Fix z-index problem

--- a/client/src/routers/RootRouter.scss
+++ b/client/src/routers/RootRouter.scss
@@ -243,4 +243,5 @@
   width: 100%;
   position: fixed;
   bottom: 0;
+  z-index: 1;
 }
